--- a/override/old_userChrome-override.css
+++ b/override/old_userChrome-override.css
@@ -1,136 +1,127 @@
+ @media (prefers-color-scheme: light){
+     :root {
+         --firefoxcss-tab-bg-color: #D0E4FE !important;
+    }
+     #TabsToolbar .tabbrowser-tab:is([selected], [multiselected]), #TabsToolbar .tabbrowser-tab:hover{
+         color: black !important;
+    }
+     #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-background[selected] {
+         color: black !important;
+         background-color: white !important;
+    }
+        #PersonalToolbar {
+         max-height: 25px !important;
+         background-color: hsl(240, 10%, 92%) !important;
 
-@media (prefers-color-scheme: light){
-  :root {
-  --firefoxcss-tab-bg-color: #D0E4FE !important; }
+    }
 }
-@media (prefers-color-scheme: dark) {
-  :root {
-    --firefoxcss-non-active-tabs: #FFFFFF;}
+ @media (prefers-color-scheme: dark) {
+     :root {
+         --firefoxcss-non-active-tabs: #FFFFFF;
+    }
+     #PersonalToolbar {
+         max-height: 25px !important;
+         background-color: hsl(240, 2%, 20%) !important;
+         color: white !important;
+    }
 }
-
-:root {
-  --firefoxcss-border-radius: 4px !important;
+ :root {
+     --firefoxcss-border-radius: 4px !important;
 }
-
-:root {
-  --tab-min-height: 21px !important;
+ :root {
+     --tab-min-height: 21px !important;
 }
-:root #tabbrowser-tabs {
-  --tab-min-height: 21px !important;
+ :root #tabbrowser-tabs {
+     --tab-min-height: 21px !important;
 }
-#tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs]) > #tabbrowser-arrowscrollbox > .tabbrowser-tab:nth-child(1 of :not([pinned], [hidden])) {
-  margin-inline-start: 0px !important;
+ #tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs]) > #tabbrowser-arrowscrollbox > .tabbrowser-tab:nth-child(1 of :not([pinned], [hidden])) {
+     margin-inline-start: 0px !important;
 }
-
-#toolbar-menubar {
-  line-height: 20px !important;
-  max-height: 20px !important;
+ #toolbar-menubar {
+     line-height: 20px !important;
+     max-height: 20px !important;
 }
-#tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs])
-  > #tabbrowser-arrowscrollbox
-  > .tabbrowser-tab[first-visible-unpinned-tab] {
-  margin-inline-start: 0px !important;
+ #tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs]) > #tabbrowser-arrowscrollbox > .tabbrowser-tab[first-visible-unpinned-tab] {
+     margin-inline-start: 0px !important;
 }
-.tabbrowser-tab .tab-background:not([selected]) {
-  padding-inline: 0px !important;
+ .tabbrowser-tab .tab-background:not([selected]) {
+     padding-inline: 0px !important;
 }
-.tabbrowser-tab {
-    max-height: calc(var(--tab-min-height) + var(--toolbarbutton-inner-padding)) !important;
-	padding-inline: 1px !important;
+ .tabbrowser-tab {
+     max-height: calc(var(--tab-min-height) + var(--toolbarbutton-inner-padding)) !important;
+     padding-inline: 1px !important;
 }
-
-.tabbrowser-tab[pinned] {
-  max-width: 30px !important;
+ .tabbrowser-tab[pinned] {
+     max-width: 30px !important;
 }
-
 /* Narrow the gap between the favicon and the title */
-.tab-icon-image:[pinned] {
-    margin-inline-end: 2px !important;
+ .tab-icon-image:[pinned] {
+     margin-inline-end: 2px !important;
 }
-.tab-content {
-    padding: 0 4px !important;
+ .tab-content {
+     padding: 0 4px !important;
 }
-#PlacesToolbarItems > .bookmark-item[container] {
-	fill: cyan !important;
+ #PlacesToolbarItems > .bookmark-item[container] {
+     fill: cyan !important;
 }
-
-.tabbrowser-tab:not([pinned]) {
-    width: 100px !important;
+ .tabbrowser-tab:not([pinned]) {
+     width: 100px !important;
 }
-#urlbar .urlbar-input-box {
-  text-align: left;
+ #urlbar .urlbar-input-box {
+     text-align: left;
 }
-#nav-bar:not([customizing="true"]):not(.searchButton)
-  > #nav-bar-customization-target
-  > #urlbar-container:not(:hover)
-  > #urlbar:not([focused])
-  > #urlbar-input-container
-  > :is(#page-action-buttons) {
-  opacity: 100;
-  transition-delay: 0ms;
+ #nav-bar:not([customizing="true"]):not(.searchButton) > #nav-bar-customization-target > #urlbar-container:not(:hover) > #urlbar:not([focused]) > #urlbar-input-container > :is(#page-action-buttons) {
+     opacity: 100;
+     transition-delay: 0ms;
 }
-#urlbar #identity-icon {
-  visibility: visible !important;
-  transition: 0ms !important;
-  opacity: 1 !important;
-  -moz-margin-end: initial !important;
+ #urlbar #identity-icon {
+     visibility: visible !important;
+     transition: 0ms !important;
+     opacity: 1 !important;
+     -moz-margin-end: initial !important;
 }
-#main-window #TabsToolbar {
-  height: 100% !important;
-  overflow: hidden;
-  transition: height .3s .3s !important;
+ #main-window #TabsToolbar {
+     height: 100% !important;
+     overflow: hidden;
+     transition: height .3s .3s !important;
 }
-
-#PlacesToolbarItems > .bookmark-item {
-  padding-block: 6px !important;
-  padding-left: 2px !important;
-  padding-right: 2px !important;
+ #PlacesToolbarItems > .bookmark-item {
+     padding-block: 6px !important;
+     padding-left: 2px !important;
+     padding-right: 2px !important;
 }
-
-
-#nav-bar.browser-toolbar {
-  height: 30px !important;
+ #nav-bar.browser-toolbar {
+     height: 30px !important;
 }
-#urlbar-container {
-  --urlbar-container-height: 35x !important;
+ #urlbar-container {
+     --urlbar-container-height: 35x !important;
 }
-
-#urlbar-container #urlbar {
-  --urlbar-toolbar-height: 28px !important;
-  --urlbar-height: 29px !important;
-  --urlbar-min-height: 25px !important;
+ #urlbar-container #urlbar {
+     --urlbar-toolbar-height: 28px !important;
+     --urlbar-height: 29px !important;
+     --urlbar-min-height: 25px !important;
 }
-
-toolbarbutton {
-  margin-top: 0px !important;
-  margin-bottom: 0px !important;
+ toolbarbutton {
+     margin-top: 0px !important;
+     margin-bottom: 0px !important;
 }
-#TabsToolbar {
-  padding-top: 0px !important;
-  padding-bottom: 0px !important;
+ #TabsToolbar {
+     padding-top: 0px !important;
+     padding-bottom: 0px !important;
 }
-#OtherBookmarks {
-  display: none !important;
+ #OtherBookmarks {
+     display: none !important;
 }
-.tabbrowser-tab:not([visuallyselected="true"]):not([multiselected]):not(:hover) .tab-label-container 
-
-
-#titlebar-buttonbox {
-  vertical-align: top !important;
-  display: block !important;
+ .tabbrowser-tab:not([visuallyselected="true"]):not([multiselected]):not(:hover) .tab-label-container #titlebar-buttonbox {
+     vertical-align: top !important;
+     display: block !important;
 }
-
-
-/* Pinned tabs padding  */
-:root:not([uidensity="compact"]) .tab-content[pinned] {
-  padding: 0 4px !important;
+/* Pinned tabs padding */
+ :root:not([uidensity="compact"]) .tab-content[pinned] {
+     padding: 0 4px !important;
 }
-#TabsToolbar #tabbrowser-tabs .tabbrowser-tab[selected][fadein]:not([pinned]) {
-   max-width: var(--firefoxcss-tab-max-width) !important;
-   min-width: var(--firefoxcss-tab-max-width) !important;
+ #TabsToolbar #tabbrowser-tabs .tabbrowser-tab[selected][fadein]:not([pinned]) {
+     max-width: var(--firefoxcss-tab-max-width) !important;
+     min-width: var(--firefoxcss-tab-max-width) !important;
 }
-#PersonalToolbar {
-  max-height: 25px !important;
-  background-color: hsl(240, 2%, 20%) !important;
-  color: white !important;
-}
+ 
