--- a/override/old_userContent-override.css
+++ b/override/old_userContent-override.css
@@ -1,3 +1,4 @@
+@import url("userContent-mysites.css");
 .tabbrowser-tab[usercontextid] > .tab-stack > .tab-background > .tab-context-line {
   background-color: var(--identity-icon-color);
   height: 1px;
