--- a/override/old_userContent-override.css
+++ b/override/old_userContent-override.css
@@ -5,3 +5,21 @@
   border-radius: 2px;
   margin: -3px 2px 0;
 }
+  @-moz-document url("about:home"),
+  url("about:newtab") {
+  
+    #root .outer-wrapper .top-sites-list .top-site-outer {
+        padding: 0px 0px 4px !important;
+    }
+  
+    #root .top-site-outer .tile .icon-wrapper,
+    #root .outer-wrapper .top-site-outer .top-site-inner,
+    #root .outer-wrapper .top-site-outer .top-site-inner .tile {
+        border-radius: 40% !important;
+    }
+
+    #root .top-site-outer {
+        width: 120px !important;
+    }
+  
+}
